--- a/src/Components/GameBoard/styles.module.scss
+++ b/src/Components/GameBoard/styles.module.scss
@@ -6,7 +6,7 @@ $border-color: #4caf50;
 $button-bg: #4caf50;
 $button-hover: #3e8e41;
 
-.game-container {
+.gameContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -22,7 +22,7 @@ $button-hover: #3e8e41;
   margin-bottom: 20px;
 }
 
-.canvas-container {
+.canvasContainer {
   position: relative;
   canvas {
     border: 2px solid $border-color;
@@ -30,7 +30,7 @@ $button-hover: #3e8e41;
   }
 }
 
-.start-button {
+.startBtn {
   margin-top: 20px;
   padding: 10px 20px;
   font-size: 18px;
