--- a/src/Components/GameBoard/styles.module.scss
+++ b/src/Components/GameBoard/styles.module.scss
@@ -11,7 +11,6 @@ $button-hover: #3e8e41;
   align-items: center;
   justify-content: center;
   height: 100vh;
-  // background-color: #1a1a1a;
   font-family: Arial, sans-serif;
 }
 
@@ -30,6 +29,7 @@ $button-hover: #3e8e41;
 }
 
 .startBtn {
+  display: block;
   margin-top: 20px;
   padding: 10px 20px;
   font-size: 18px;
