--- a/src/Components/GameBoard/styles.module.scss
+++ b/src/Components/GameBoard/styles.module.scss
@@ -44,3 +44,63 @@ $button-hover: #3e8e41;
     background-color: $button-hover;
   }
 }
+
+// -------------------------------------------- //
+
+.mobileControls {
+  display: none; /* Hide by default */
+  flex-direction: column;
+  align-items: center;
+  gap: 5px;
+  margin-top: 10px;
+
+  .horizontalControls {
+    display: flex;
+    gap: 40px;
+  }
+
+  .controlButton {
+    background-color: #4caf50;
+    color: white;
+    border: none;
+    border-radius: 40%;
+    width: 50px;
+    height: 50px;
+    font-size: 20px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+
+    &:hover {
+      background-color: #45a049;
+    }
+  }
+}
+
+.mobilePauseButton {
+  display: none; 
+  margin-top: 20px;
+  padding: 10px 20px;
+  background-color: #2196f3;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+
+  &:hover {
+    background-color: #1976d2;
+  }
+}
+
+@media (max-width: 768px) {
+  .mobileControls {
+    display: flex;
+  }
+
+  .mobilePauseButton {
+    display: block;
+  }
+  .startBtn {
+    display: none;
+  }
+}
