--- a/src/Components/BaseGame/styles.module.scss
+++ b/src/Components/BaseGame/styles.module.scss
@@ -71,9 +71,9 @@ $button-hover: #3e8e41;
     color: white;
     border: none;
     border-radius: 40%;
-    width: 50px;
-    height: 50px;
-    font-size: 20px;
+    width: 55px;
+    height: 55px;
+    font-size: 22px;
     cursor: pointer;
     transition: background-color 0.3s;
     
@@ -135,3 +135,8 @@ $button-hover: #3e8e41;
     font-size: x-small;
   }
 }
+
+// // -------------------------------------------- //
+// .snakeSegment {
+//   transition: transform 0.1s ease;
+// }
