--- a/src/Components/BaseGame/styles.module.scss
+++ b/src/Components/BaseGame/styles.module.scss
@@ -37,21 +37,6 @@ $button-hover: #3e8e41;
   }
 }
 
-.startBtn {
-  align-self: self-end;
-  margin-top: 40px;
-  padding: 10px 20px;
-  font-size: 18px;
-  cursor: pointer;
-  background-color: $button-bg;
-  border-radius: 5px;
-  transition: background 0.3s ease-in-out;
-
-  &:hover {
-    background-color: $button-hover;
-  }
-}
-
 // -------------------------------------------- //
 
 .mobileControls {
@@ -84,16 +69,15 @@ $button-hover: #3e8e41;
 }
 
 .mobilePauseButton {
-  display: none;
   align-self: self-end;
-  margin-top: 30px;
+  margin-top: 40px;
   padding: 10px 20px;
   background-color: #2196f3;
   color: white;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  transition: background-color 0.3s;
+  transition: background-color 0.3s ease-in-out;
   
   &:hover {
     background-color: #1976d2;
@@ -103,13 +87,6 @@ $button-hover: #3e8e41;
 @media (max-width: 768px) {
   .mobileControls {
     display: flex;
-  }
-  
-  .mobilePauseButton {
-    display: block;
-  }
-  .startBtn {
-    display: none;
   }
 }
 
